refactor and add geometric smoothing

--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
                             <tr>
                                 <td colspan=3>
                                     <div id="slider">
-                                        <span id="output"></span>
-                                        <span id="input"></span>
+                                        <span id="slider-output"></span>
+                                        <span id="slider-input"></span>
                                     </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan=2>
+                                    Gemoetric Smoothing
+                                    &nbsp;&nbsp;<span id="smoothing-switch"></span>
                                 </td>
                             </tr>
                         </table>
